--- a/pages/Login/index.html
+++ b/pages/Login/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Expense Tracker</title>
+    <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -16,21 +16,16 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-
-    <!-- CSS part -->
-    <link rel="stylesheet" href="./css/desktop.scss" />
   </head>
 
   <body>
-    <header>Header</header>
-    <main>
-      <section>
-        <div>Expense Tracker</div>
-      </section>
-    </main>
-
-    <script src="./store/User.js"></script>
-
+    <header>
+      <!-- place navbar here -->
+    </header>
+    <main></main>
+    <footer>
+      <!-- place footer here -->
+    </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
