--- a/pages/CategoryList/index.html
+++ b/pages/CategoryList/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Expense Tracker</title>
+    <title>Category List</title>
 
     <!-- CSS part -->
     <link rel="stylesheet" href="/styles/desktop.css" />
   </head>
   <body>
-    <section>Dashboard</section>
-
-    <script src="./store/User.js"></script>
+    <section>Category List</section>
   </body>
 </html>
