[feat] Call expense list in expense list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <section>Dashboard</section>
-
-    <script src="./store/User.js"></script>
   </body>
+
+  <script src="./classes/User.js"></script>
 </html>
