--- a/pages/expense-list/index.html
+++ b/pages/expense-list/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <section>Expense List</section>
+    <ul></ul>
   </body>
+
+  <script src="/utils/loadFile.js"></script>
+  <script type="module" src="/modules/expense_module.js"></script>
 </html>
