--- a/pages/category-list/index.html
+++ b/pages/category-list/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="/styles/desktop.css" />
   </head>
   <body>
-    <section>Category List</section>
+    <div class="wrap">
+      <header>
+        <script>
+          fetch("/header.html")
+            .then((response) => response.text())
+            .then((data) => {
+              document.querySelector("header").innerHTML = data;
+            });
+        </script>
+      </header>
+
+      <main><section>Category List</section></main>
+    </div>
   </body>
 </html>
