--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrap">
       <header>
         <script>
-          fetch("/header.html")
+          fetch("/components/header.html")
             .then((response) => response.text())
             .then((data) => {
               document.querySelector("header").innerHTML = data;
