--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
   <body>
     <div class="wrap">
       <header>
-        <script>
-          fetch("/components/header.html")
-            .then((response) => response.text())
-            .then((data) => {
-              document.querySelector("header").innerHTML = data;
-            });
-        </script>
+        <script src="/classes/Header.js"></script>
       </header>
 
       <main>
