--- a/pages/category-list/index.html
+++ b/pages/category-list/index.html
@@ -11,13 +11,7 @@
   <body>
     <div class="wrap">
       <header>
-        <script>
-          fetch("/header.html")
-            .then((response) => response.text())
-            .then((data) => {
-              document.querySelector("header").innerHTML = data;
-            });
-        </script>
+        <script src="/classes/Header.js"></script>
       </header>
 
       <main><section>Category List</section></main>
