--- a/pages/expense-list/index.html
+++ b/pages/expense-list/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS part -->
     <link rel="stylesheet" href="/styles/desktop.css" />
+    <link rel="stylesheet" href="/styles/mobile.css" />
   </head>
   <body>
     <div class="wrap">
@@ -107,7 +108,7 @@
             expense.cost !== undefined && expense.cost !== null
               ? expense.cost.toFixed(2)
               : "0.00"
-          }</td> <!-- NaN 체크 -->
+          }</td>
           <td><button>Edit</button></td> 
           <td><button>Delete</button></td>
         `;
