--- a/pages/category-list/index.html
+++ b/pages/category-list/index.html
@@ -7,6 +7,7 @@
 
     <!-- CSS part -->
     <link rel="stylesheet" href="/styles/desktop.css" />
+    <link rel="stylesheet" href="/styles/mobile.css" />
   </head>
   <body>
     <div class="wrap">
