[feat] Add filter funciton

--- a/pages/add-expense/index.html
+++ b/pages/add-expense/index.html
@@ -8,6 +8,7 @@
         </select>
         <select id="categoryList"></select>
         <input type="date" required />
+        <input type="text" id="title" placeholder="Enter title" required />
         <input
           type="text"
           id="description"
